--- a/express/views/layout.ejs
+++ b/express/views/layout.ejs
@@ -7,11 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- 傳值 -->
-    <%- title %>
-    <h1><%= boss %></h1>
-    <% if(show){ %>
-        <span>show 呈現資料</span>
-    <% } %>
+    <%- body %>
 </body>
 </html>
