--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <!-- <p>Welcome to <%= title %></p> -->
+    <input type="text" name="content" id="content">
+    <input type="submit" value="save">
+    <ul>
+      <li></li>
+    </ul>
   </body>
 </html>
