--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    
   </head>
   <body>
     <h1><%= title %></h1>
@@ -10,7 +11,10 @@
     <input type="text" name="content" id="content">
     <input type="submit" value="save">
     <ul>
-      <li></li>
+      <li>1234
+        <input type="button" value="delete"></input>
+      </li>
     </ul>
+    <script> src="/js/all.js"</script>
   </body>
 </html>
