--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <!-- <p>Welcome to <%= title %></p> -->
-    <input type="text" name="content" id="content">
-    <input type="submit" value="save">
-    <ul>
-      <li>1234
-        <input type="button" value="delete"></input>
-      </li>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <h1> 代辦事項列表 </h1>
+    <input type="text" id="content" name="content">
+    <input type="submit" id="send" value="儲存">
+    <ul id="list">
+       <% for(item in todolist){ %>
+            <li><%- todolist[item].content %> <input type="button" data-id="<%- item %>" name="" value="刪除"></li>
+        <% } %> 
     </ul>
-    <script> src="/js/all.js"</script>
-  </body>
+    <script src="/js/all.js"></script>
+</body>
 </html>
