--- a/heroku-nodejs/views/login.ejs
+++ b/heroku-nodejs/views/login.ejs
@@ -21,5 +21,8 @@
             <input type="submit" value="Log In" />
         </div>
     </form>
+    <form action="/reset" method="post">
+        <h1>忘記密碼</h1>
+    </form>
 </body>
 </html>
