--- a/BlogDemo/views/layouts/layout.ejs
+++ b/BlogDemo/views/layouts/layout.ejs
@@ -41,7 +41,7 @@
   </nav>
   <div class="container">
 
-    <% content %>
+    <%- content %>
   </div>
   <footer class="bg-light text-muted py-5">
     <div class="container">
