--- a/BlogDemo/views/dashboard/categories.ejs
+++ b/BlogDemo/views/dashboard/categories.ejs
@@ -63,7 +63,7 @@
             <td class="align-middle">心得</td>
             <td><input type="text" class="form-control form-control-sm" value="mind"></td>
             <td class="align-middle">
-              <form method="POST">
+              <form  method="POST">
                 <button type="submit" class="btn btn-outline-danger btn-sm">刪除</button>
               </form>
             </td>
@@ -72,7 +72,7 @@
       </tbody>
     </table>
 
-    <form method="POST">
+    <form method="POST" action="/dashboard/categories/create">
       <table class="table">
         <tr>
           <td class="align-middle">新增</td>
