--- a/BlogDemo/views/dashboard/categories.ejs
+++ b/BlogDemo/views/dashboard/categories.ejs
@@ -58,17 +58,17 @@
         </tr>
       </thead>
       <tbody>
-        
+          <%  for (var prop in categories) {%>
           <tr>
-            <td class="align-middle">心得</td>
-            <td><input type="text" class="form-control form-control-sm" value="mind"></td>
+            <td class="align-middle"><%- categories[prop].name  %></td>
+            <td><input type="text" class="form-control form-control-sm" value=<%- categories[prop].path  %>></td>
             <td class="align-middle">
               <form  method="POST">
                 <button type="submit" class="btn btn-outline-danger btn-sm">刪除</button>
               </form>
             </td>
           </tr>
-        
+          <% } %>
       </tbody>
     </table>
 
