--- a/BlogDemo/views/dashboard/categories.ejs
+++ b/BlogDemo/views/dashboard/categories.ejs
@@ -63,7 +63,7 @@
             <td class="align-middle"><%- categories[prop].name  %></td>
             <td><input type="text" class="form-control form-control-sm" value=<%- categories[prop].path  %>></td>
             <td class="align-middle">
-              <form  method="POST">
+              <form action="/dashboard/categories/delete/<%- prop %>" method="POST">
                 <button type="submit" class="btn btn-outline-danger btn-sm">刪除</button>
               </form>
             </td>
