--- a/BlogDemo/views/dashboard/article.ejs
+++ b/BlogDemo/views/dashboard/article.ejs
@@ -8,7 +8,11 @@
  %>
 <div class="main container-fluid my-4">
 <form 
-  action="/dashboard/article/create"
+  <% if(article.id) { %>
+    action="/dashboard/article/update/<%- article.id %>"
+  <% } else { %>
+    action="/dashboard/article/create"
+  <% } %>
   method="POST" 
   class="row justify-content-center">
   <div class="col-md-6">
@@ -32,7 +36,7 @@
           <div class="form-check">
             <label class="form-check-label">
               <input class="form-check-input" type="radio" name="category" required value="<%- prop %>" 
-                <% if(prop ==== article.category){ %> checked <% } %> >
+                <% if(prop === article.category){ %> checked <% } %> >
                 <%- categories[prop].name  %>
             </label>
           </div>
