--- a/BlogDemo/views/layouts/dashboard-layout.ejs
+++ b/BlogDemo/views/layouts/dashboard-layout.ejs
@@ -34,9 +34,9 @@
         </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="archives.html">
+        <a class="nav-item nav-link active" href="/dashboard/archives">
           文章管理 </a>
-        <a class="nav-item nav-link " href="categories.html">分類管理 </a>
+        <a class="nav-item nav-link " href="/dashboard/categories">分類管理 </a>
       </div>
     </div>
     <a class="nav-link" href="#">登出</a>
