--- a/BlogDemo/views/dashboard/archives.ejs
+++ b/BlogDemo/views/dashboard/archives.ejs
@@ -13,7 +13,7 @@
     <div class="btn-group w-100">
       <a href="#" class="btn btn-outline-secondary w-100 rounded-0 active">已發佈</a>
       <a href="#" class="btn btn-outline-secondary w-100 rounded-0 ">草稿</a>
-      <a href="article.html" class="btn btn-primary">新增文章</a>
+      <a href="/dashboard/article/create" class="btn btn-primary">新增文章</a>
     </div>
 
     
