--- a/BlogDemo/views/dashboard/archives.ejs
+++ b/BlogDemo/views/dashboard/archives.ejs
@@ -1,49 +1,57 @@
 
 <% extend('../layouts/dashboard-layout') %>
 
+
+
   <div class="main container-fluid my-4">
     
 
 <div class="row justify-content-center">
+
+
+
   <div class="col-md-6">
     
 
     
-
+    
     <div class="btn-group w-100">
-      <a href="#" class="btn btn-outline-secondary w-100 rounded-0 active">已發佈</a>
-      <a href="#" class="btn btn-outline-secondary w-100 rounded-0 ">草稿</a>
+      <a href="/dashboard/archives?status=public" class="btn btn-outline-secondary w-100 rounded-0 <% if(status === 'public'){ %> active <% } %>">已發佈</a>
+      <a href="/dashboard/archives?status=draft" class="btn btn-outline-secondary w-100 rounded-0 <% if(status === 'draft'){ %> active <% } %>">草稿</a>
       <a href="/dashboard/article/create" class="btn btn-primary">新增文章</a>
     </div>
-
     
+      <% for (var prop in articles) { %>
       <div class="card my-3">
         <h4 class="card-header">
-          補充課程：Sass 與 includePaths
+           <%- articles[prop].title %>
         </h4>
         <div class="card-body">
-          [程式][PHP] HTML 表單(Form)以陣列(Array)方式傳遞&lt;input&nbsp;type=&#39;text&#39;&gt;資訊。 什麼時候會用到這樣的方法，我無法明確表達，可能要靠你自己想像。 我遇到的狀況是要讓user不斷的新增商品與價格。 第一種做法：&nbsp;.....
+            <%- stringtags(articles[prop].content).slice(0,50) %>...
+            
           <div>
             <span class="fa fa-clock-o"></span> 
-            2018/01/04
+            <%- momont(articles[prop].update_time*1000).format('YYYY/MM/DD') %>
+           
             ,
             <span class="fa fa-folder-open-o"></span>
             <span>
-              
-                沒有分類
+                <%- categories[articles[prop].category].name %>
+                
               
             </span>
           </div>
         </div>
         <div class="card-footer p-0 btn-group">
-          <a href="#" class="btn btn-outline-danger rounded-0 deletePost" data-id="-L1zrsyiWCAbMQ5x8Plk" data-title="補充課程：Sass 與 includePaths">刪除</a>
+          <a href="#" class="btn btn-outline-danger rounded-0 deletePost" data-id="<%- articles[prop].id %>" data-title="<%- articles[prop].title %>">刪除</a>
           <a href="#" class="btn btn-outline-secondary w-100 rounded-0">編輯</a>
           
           <a href="#" target="_blank" class="btn btn-outline-secondary w-100 rounded-0">預覽</a>
           
         </div>
+        
       </div>
-    
+    <% } %>
   </div>
 </div>
 
@@ -72,3 +80,27 @@
   </ul>
 </nav>
   </div>
+<script>
+  $(document).ready(function(){
+
+    $(".deletePost").on('click',function(e){
+        e.preventDefault();
+        var id= $(this).data('id');
+        var title= $(this).data('title');
+        if(confirm('確認是否刪除'+title)){
+
+            $.ajax({
+              url:'/dashboard/article/delete/'+id,
+              method: 'POST'
+            }).done(function(response){
+
+                console.log(response);
+                window.location='/dashboard/archives';
+            });
+
+        }
+    })
+
+  });
+
+</script>
