--- a/BlogDemo/views/layouts/layout.ejs
+++ b/BlogDemo/views/layouts/layout.ejs
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #00cc99;">
     <a class="navbar-brand" href="/">
       <i class="fa fa-diamond" aria-hidden="true"></i>
-      六角部落格
+      部落格
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
