--- a/BlogDemo/views/index.ejs
+++ b/BlogDemo/views/index.ejs
@@ -8,7 +8,7 @@
     <% for (var prop in articles) { %>
       <div class="card mb-3">
         <div class="card-body">
-          <a href="/post"> <h2 class="text-primary"><%- articles[prop].title %></h2></a>
+          <a href="/post/<%- articles[prop].id %>"> <h2 class="text-primary"><%- articles[prop].title %></h2></a>
           <div class="d-flex flex-row text-secondary small">
             <div class="p-2"><span class="fa fa-clock-o"></span> <%- momont(articles[prop].update_time*1000).format('YYYY/MM/DD') %></div>
             <div class="p-2"><i class="fa fa-tag" aria-hidden="true"></i> 
@@ -18,7 +18,8 @@
             </div>
           </div>
           <div>
-            <%- articles[prop].content %>
+            
+             <%- stringtags(articles[prop].content).slice(0,150) %>...
           </div>
         </div>
       </div>
@@ -26,30 +27,8 @@
   </div>
 </div>
 
-
-<nav class="my-5" aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="/?page=0" tabindex="-1">Previous</a>
-    </li>
-    
-      <li class="page-item active"> 
-        <a class="page-link" href="/?page=1">
-          1
-        </a>
-      </li>
-    
-      <li class="page-item "> 
-        <a class="page-link" href="/?page=2">
-          2
-        </a>
-      </li>
-    
-    <li class="page-item ">
-      <a class="page-link" href="/?page=2">Next</a>
-    </li>
-  </ul>
-</nav>
+<!-- 使用include  必定寫入且執行 -->
+<%- include('partials/pagination')%>
 
   </div>
   
