--- a/BlogDemo/views/post.ejs
+++ b/BlogDemo/views/post.ejs
@@ -11,31 +11,53 @@
         沒有分類
       
     </a>
-    <span class="breadcrumb-item active">補充課程：Sass 與 includePaths</span>
+    <span class="breadcrumb-item active"><%- articles[0].title %></span>
   </nav>
   <div class="row justify-content-center">
     <div class="col-md-9">
       <!-- artical header -->
-      <h1 class="text-primary">補充課程：Sass 與 includePaths</h1>
+      <h1 class="text-primary"><%- articles[0].title %></h1>
       <div class="d-flex flex-row text-secondary small">
         <div class="p-2"><i class="fa fa-user-o" aria-hidden="true"></i> 卡斯伯</div>
-        <div class="p-2">2018/01/04</div>
+        <div class="p-2"><%- momont(articles[0].update_time*1000).format('YYYY/MM/DD') %></div>
         <div class="p-2"><i class="fa fa-tag" aria-hidden="true"></i> 
           <a href="" class="text-info">
             
-              沒有分類
+              <%- categories[articles[0].category].name %>
             
           </a>
         </div>
       </div>
       <article class="text-dark post mb-4">
-        <p>[程式][PHP] HTML 表單(<em>Form</em>)以陣列(<em>Array</em>)方式傳遞&lt;<em>input</em>&nbsp;type=&#39;text&#39;&gt;資訊。 什麼時候會用到這樣的方法，我無法明確表達，可能要靠你自己想像。 我遇到的狀況是要讓user不斷的新增商品與價格。 第一種做法：&nbsp;...</p>
+        <p>
+        
+          <%- articles[0].content %>
+        </p>
 
       </article>
       <!-- 留言 -->
       <div class="card mb-3">
         <div class="card-body">
-          
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://blogdemo-2.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </div>
       </div>
 
