--- a/BlogDemo/views/auth/signin.ejs
+++ b/BlogDemo/views/auth/signin.ejs
@@ -23,6 +23,7 @@
           <div class="text-right mt-3">
             <a type="submit" class="btn btn-primary" href="../auth/signup">註冊</a>
             <button type="submit" class="btn btn-primary">登入</button>
+            <a type="submit" class="btn btn-primary" href="../auth/forget">忘記密碼</a>
           </div>
           
         </form>
