--- a/BlogDemo/views/dashboard/index.ejs
+++ b/BlogDemo/views/dashboard/index.ejs
@@ -1,4 +1,8 @@
 <% extend('../layouts/dashboard-layout') %>
 <div class="main">
-    
+    <form method='post' action='upload' enctype="multipart/form-data">
+
+        <input type='file' name='fileUploaded'>
+        <input type='submit'>
+    </form>
 </div>
