--- a/BlogDemo/views/layouts/dashboard-layout.ejs
+++ b/BlogDemo/views/layouts/dashboard-layout.ejs
@@ -39,7 +39,11 @@
         <a class="nav-item nav-link " href="/dashboard/categories">分類管理 </a>
       </div>
     </div>
-    <a class="nav-link" href="#">登出</a>
+    <a class="nav-link" href="/">  <% if(auth) { %>
+   登出
+  <% } else { %>
+   登入
+  <% } %></a>
   </nav>
   <div class="main container-fluid my-4">
     
