--- a/BlogDemo/views/auth/index.ejs
+++ b/BlogDemo/views/auth/index.ejs
@@ -9,10 +9,19 @@
         <h4>Or drop image here:</h4>
             <div id="dragArea">
             
-            </div>
+         </div>
         -->
             <h4>Preview image here:</h4>
-            <div id="previewDiv"></div>
+            <div id="previewDiv">
+                <!-- <img width='250' src="user_data/<%- userdata[0].uid %>.jpg"> -->
+            </div>
+            <h4>姓名:</h4>
+               <!-- <input type="text" class="form-control" id="name" name="name"  aria-describedby="nameHelp" placeholder="請輸入 姓名"
+              required value="<%- userdata %>">-->
+            <h4>文章:</h4>
+            <div id="user_article">
+                
+            </div>
             <input type='submit'>
         </form>
  </div>
