--- a/BlogDemo/views/auth/signup.ejs
+++ b/BlogDemo/views/auth/signup.ejs
@@ -15,6 +15,12 @@
             <small id="emailHelp" class="form-text text-muted">我們不會隨意散佈你的 Email</small>
           </div>
           <div class="form-group">
+            <label for="text">暱稱</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" name="name" aria-describedby="nameHelp" placeholder="請輸入 暱稱"
+              required>
+           
+          </div>
+          <div class="form-group">
             <label for="password">密碼</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼" required>
           </div>
