--- a/socketDemo/views/index.ejs
+++ b/socketDemo/views/index.ejs
@@ -3,6 +3,12 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js'></script>
+    <script>
+     
+    </script>
+    <script src="/js/app.js"></script>
+
   </head>
   <body>
     <h1><%= title %></h1>
